--- a/stripe-payment/index.html
+++ b/stripe-payment/index.html
@@ -1,57 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Invoice</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .card {
+            max-width: 600px;
+            margin: 50px auto;
+        }
+
+        .card-header {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .form-group label {
+            font-weight: bold;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Create a New Invoice</h1>
-    <form action="create_invoice.php" method="POST">
-        <!-- 1. Buyer Information -->
-        <h2>Buyer Information</h2>
-        <label for="buyer_email">Buyer Email:</label>
-        <input type="email" id="buyer_email" name="buyer_email" required><br><br>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                Request Finance Payment
+            </div>
+            <div class="card-body">
+                <form action="create_invoice.php" method="POST">
+                    <!-- Buyer Email -->
+                    <div class="form-group">
+                        <label for="buyer_email">Buyer Email:</label>
+                        <input type="email" class="form-control" id="buyer_email" name="buyer_email" required>
+                    </div>
 
-        <!-- 2. Invoice Item Details -->
-        <h2>Invoice Item Details</h2>
-        <label for="currency">Currency:</label>
-        <select id="currency" name="currency" required>
-            <option value="USD">USD</option>
-            <!-- Add more currencies as needed -->
-        </select><br><br>
+                    <!-- Currency -->
+                    <div class="form-group">
+                        <label for="currency">Currency:</label>
+                        <select class="form-control" id="currency" name="currency" required>
+                            <option value="USD">USD</option>
+                            <!-- Add more currencies as needed -->
+                        </select>
+                    </div>
 
-        <label for="item_name">Item Name:</label>
-        <input type="text" id="item_name" name="item_name" required><br><br>
+                    <!-- Item Name -->
+                    <div class="form-group">
+                        <label for="item_name">Item Name:</label>
+                        <input type="text" class="form-control" id="item_name" name="item_name" required>
+                    </div>
 
-        <label for="quantity">Quantity:</label>
-        <input type="number" id="quantity" name="quantity" min="1" required><br><br>
+                    <!-- Quantity -->
+                    <div class="form-group">
+                        <label for="quantity">Quantity:</label>
+                        <input type="number" class="form-control" id="quantity" name="quantity" min="1" required>
+                    </div>
 
-        <label for="unit_price">Unit Price:</label>
-        <input type="number" id="unit_price" name="unit_price" step="0.01" required><br><br>
+                    <!-- Unit Price -->
+                    <div class="form-group">
+                        <label for="unit_price">Unit Price:</label>
+                        <input type="number" class="form-control" id="unit_price" name="unit_price" step="0.01" required>
+                    </div>
 
-        <!-- 3. Payment Terms -->
-        <h2>Payment Terms</h2>
-        <label for="due_date">Due Date:</label>
-        <input type="date" id="due_date" name="due_date" required><br><br>
+                    <!-- Due Date -->
+                    <div class="form-group">
+                        <label for="due_date">Due Date:</label>
+                        <input type="date" class="form-control" id="due_date" name="due_date" required>
+                    </div>
 
-        <!-- 4. Payment Options -->
-        <h2>Payment Options</h2>
-        <!-- Assuming payment address and chain are predefined -->
-        <input type="hidden" name="payment_address" value="0xcf604e3cc07b1ea04846431adf260075384238f6">
-        <input type="hidden" name="chain" value="base">
-        <p>Payment will be made via USDC-base to the predefined wallet address.</p>
+                    <!-- Invoice Number -->
+                    <div class="form-group">
+                        <label for="invoice_number">Invoice Number:</label>
+                        <input type="text" class="form-control" id="invoice_number" name="invoice_number" required>
+                    </div>
 
-        <!-- 5. Invoice Number -->
-        <h2>Invoice Number</h2>
-        <label for="invoice_number">Invoice Number:</label>
-        <input type="text" id="invoice_number" name="invoice_number" required><br><br>
+                    <!-- Payment Address (Hidden) -->
+                    <input type="hidden" name="payment_address" value="0xcf604e3cc07b1ea04846431adf260075384238f6">
+                    <input type="hidden" name="chain" value="base">
 
-        <!-- 6. Tags (Optional) -->
-        <h2>Tags (Optional)</h2>
-        <label for="tags">Tags:</label>
-        <input type="text" id="tags" name="tags" placeholder="e.g., funding wallet"><br><br>
+                    <!-- Blockchain Network -->
+                    <div class="form-group">
+                        <label for="blockchain_network">Blockchain Network:</label>
+                        <input type="text" class="form-control" id="blockchain_network" name="blockchain_network" value="Base" readonly>
+                    </div>
 
-        <button type="submit">Create Invoice</button>
-    </form>
+                    <!-- Submit Button -->
+                    <button type="submit" class="btn btn-primary btn-block">Pay Now</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
